--- a/Metagraph_editor/MetagraphEnvironment/Style/css/NEW.css
+++ b/Metagraph_editor/MetagraphEnvironment/Style/css/NEW.css
@@ -50,8 +50,7 @@ div.TabHeader:hover{
 #ListOfRulesBox{
         font-family: Ubuntu; 
     float:right;
-    width: 90%;
-}
+    }
 
 #ChartArea1{
     width:50vw;
@@ -198,11 +197,12 @@ h3 {
 #ListOfRulesBox {
     font-family:Ubuntu;
     font-weight:100;
-    height: 22vw;
-    width: 45vw;
     padding: 1%;
     overflow-wrap:break-word;
     word-wrap:break-word;
+    margin-left: 400px;
+    margin-top: 2px;
+    margin-bottom: 393px;
 }
 
 #text {
