--- a/Metagraph_editor/MetagraphEnvironment/Views/Home/Index.cshtml
+++ b/Metagraph_editor/MetagraphEnvironment/Views/Home/Index.cshtml
@@ -1,14 +1,21 @@
-﻿<div id="body">
-    <div id="instrument_panel">
-        <!--
-        Інструменти:
-        <br />
-        <input type="button" value='Додати вершини' onclick='changeNodeMode("addNode")' />
-        <input type="button" value='Видалити вершини' onclick='changeNodeMode("rmNode")' />
-        <input type="button" value='Рухати вершини' onclick='MovePoint();' />
-        <input type="button" value='Інфа про вершини (в консоль)' onclick='seeNodes()' />
-        -->
-    </div>
-    <div id="workZone" style="border: 1px solid black">
-    </div>
-</div>
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
+<html>
+
+<head>
+
+    <title>File Upload Sample</title>
+
+</head>
+
+<body>
+    <form action="http://localhost:46930//Home/Upload" enctype="multipart/form-data" method="POST">
+        What file are you uploading?
+        <input name="upload" size="40" type="file">
+        <br>
+        <input type="submit">
+
+    </form>
+
+</body>
+</html>
